2009-01-07 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/main_app.rb:
    * lib/fantasdic/ui/result_text_view.rb:
    * data/fantasdic/ui/menus.xml: Added buttons to directly jump to a
    definition or a database.

2009-01-07 Mathieu Blondel <mblondel@svn.gnome.org>
    
    * lib/fantasdic/sources/epwing_dictionary.rb: Early support for EPWING
    dictionaries. This is a very popular format in Japan. The source requires
    rubyeb. The source will be visible to everyone but it will eventually 
    complain if someone tries to use it without having ruby installed.

    EPWING uses EUC-JP encoding and relies on so-called "gaiji" (foreign
    character) for characters not supported by EUC-JP. gaiji are displayed as 
    images so we need a way to allow a source to display images... 
    I guess Unicode didn't exist at that time...
    To be implemented...

2009-01-07 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/main_app.rb: Fixed bug when source doesn't exist anymore.

2009-01-06 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/text/porter_stemming.rb: Support for stemming (e.g.
    stemming => stem).
    * lib/fantasdic/text/metaphone.rb: Algorithm to compare the
    pronunciation of two strings.
    * lib/fantasdic/text/double_metaphone.rb: Same.
    * lib/fantasdic/text/soundex.rb: Same.
    * lib/fantasdic/text/levenshtein.rb: Levenshtein distance.

    All those files are imported from http://rubyforge.org/projects/text.
    License is either public domain or Ruby license (GPL compatible)

    * lib/fantasdic/sources/dictd_file.rb: Support for the above methods + 
    Regexp.
    * lib/fantasdic/sources/stardict_file.rb: Same.

    * lib/fantasdic/file_source.rb: Some factoring.

    * lib/fantasdic.rb: Necessary "require"s.

2009-01-05 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/main_app.rb: Let the match side pane grab the focus when