@@ -1,3 +1,8 @@
+2009-01-08 Mathieu Blondel <mblondel@svn.gnome.org>
+
+    * lib/fantasdic/ui/result_text_view.rb: Support for image tags.
+    * lib/fantasdic/sources/epwing_dictionary.rb: Support for images and gaiji.
+
 2009-01-07 Mathieu Blondel <mblondel@svn.gnome.org>
 
     * lib/fantasdic/ui/main_app.rb:
